--- a/config/qa/config.yml
+++ b/config/qa/config.yml
@@ -2,14 +2,9 @@ server:
   port: 8080
 
 db:
-  postgres:
-    test:
-      driver: "postgres"
-      host: "localhost"
-      port: 5432
-      user: $USER
-    prod:
-      driver: "postgres"
-      host: "localhost"
-      port: 5432
-      user: "postgres"
+  host: "localhost"
+  port: 5432
+  user: "postgres"
+  password: "postgres"
+  dbname: "postgres"
+  sslmode: "disable"
